infra/erpnext/gitops/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: erpnext
  annotations:
    argocd.argoproj.io/sync-wave: "1"
spec:
  replicas: 3
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxUnavailable: 0
      maxSurge: 1
  selector:
    matchLabels:
      app: erpnext
  template:
    metadata:
      labels:
        app: erpnext
    spec:
      containers:
        - name: erpnext
          image: ghcr.io/nyeinpyaesone-ui/erp03-erpnext:IMAGE_TAG
          ports:
            - name: http
              containerPort: 8000
          readinessProbe:
            httpGet:
              path: /api/method/ping
              port: http
            initialDelaySeconds: 60
            periodSeconds: 10
            timeoutSeconds: 5
            failureThreshold: 12
          livenessProbe:
            httpGet:
              path: /api/method/ping
              port: http
            initialDelaySeconds: 120
            periodSeconds: 20
            timeoutSeconds: 5
            failureThreshold: 6
          resources:
            requests:
              cpu: 500m
              memory: 1Gi
            limits:
              cpu: "2"
              memory: 4Gi
