infra/erpnext/gitops/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: erpnext
spec:
  selector:
    app: erpnext
  ports:
    - name: http
      port: 8000
      targetPort: http
  type: ClusterIP
